tests/baselines/reference/ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.errors.txt
ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts(10,19): error TS2304: Cannot find name 'T'.
ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts(19,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts(20,12): error TS2304: Cannot find name 'T'.
ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts(22,23): error TS2304: Cannot find name 'T'.
ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts(34,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts(35,26): error TS2304: Cannot find name 'T'.
ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts(44,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts(46,15): error TS2304: Cannot find name 'T'.


==== ClassAndModuleThatMergeWithModuleMemberThatUsesClassTypeParameter.ts (9 errors) ====
    // all expected to be errors
    
    class clodule1<T>{
    
        id: string;
        value: T;
    }
    
    module clodule1 {
           ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        function f(x: T) { }
                      ~
!!! error TS2304: Cannot find name 'T'.
    }
    
    class clodule2<T>{
    
        id: string;
        value: T;
    }
    
    module clodule2 {
           ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var x: T;
               ~
!!! error TS2304: Cannot find name 'T'.
    
        class D<U extends T>{
                          ~
!!! error TS2304: Cannot find name 'T'.
            id: string;
            value: U;
        }
    }
    
    class clodule3<T>{
    
        id: string;
        value: T;
    }
    
    module clodule3 {
           ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var y = { id: T };
                             ~
!!! error TS2304: Cannot find name 'T'.
    }
    
    class clodule4<T>{
    
        id: string;
        value: T;
    }
    
    module clodule4 {
           ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class D {
            name: T;
                  ~
!!! error TS2304: Cannot find name 'T'.
        }
    }
    